fixed overflow issue on mobile

--- a/styles/partials/_genericStyling.scss
+++ b/styles/partials/_genericStyling.scss
@@ -8,6 +8,7 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 
 html {
     font-size: 125%;
+    overflow-x: hidden;
 }
 
 body {
